--- a/src/SidebarCollapsed.module.css
+++ b/src/SidebarCollapsed.module.css
@@ -1,20 +1,8 @@
-.root {
-  display: flex;
-  flex-direction: column;
-}
-
 .nav {
   flex: 1 1 0%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  animation: 0.3s reveal ease-out backwards;
-}
-
-@keyframes reveal {
-  from {
-    opacity: 0;
-  }
 }
 
 .navItem {
